--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -32,6 +32,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Players"
                                 asp-action="Index">Players</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Create"
+                                asp-action="Index">Create</a>
+                        </li>
                     </ul>
                 </div>
             </div>
