--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -17,6 +17,28 @@ body {
   margin-bottom: 60px;
 }
 
+/* Players page */
+.playersTable{
+  height: 100%;
+}
+
+.tableRowlight{
+  background-color: white;
+}
+
+.tableRowDark{
+  background-color: rgb(232, 232, 232);
+}
+
+/* Response messages */
+.successResponse{
+  color: rgb(45, 134, 45);
+}
+
+.errorResponse{
+  color:rgb(220, 81, 81);
+}
+
 /* Create */
 .statInput{
   width: 70px;
