seperated delete and search post paths. working on edit

--- a/Views/Edit/Index.cshtml
+++ b/Views/Edit/Index.cshtml
@@ -1,13 +1,12 @@
 @model myFutsalApp.Models.Player;
 @{
-    ViewData["Title"] = "Create a Player";
+    ViewData["Title"] = "Edit Player";
 }
 
 
 <div class="text-center">
     <h1 class="display-4">@ViewData["Title"]</h1>
-    <form method="post" class="mt-5" id="createPlayerForm">
-
+    <form method="post" class="mt-5" id="editPlayerForm">
 
         @* //////////Stats////////// *@
         <div class="container">
