--- a/Views/Players/Index.cshtml
+++ b/Views/Players/Index.cshtml
@@ -4,18 +4,18 @@
 
 @{
     ViewData["Title"] = "Players Database";
-    if (Model.PlayerList != null)
-    {
+    @* if (Model.PlayerList != null)
+        {
         foreach (var data in Model.PlayerList)
         {
-            Console.WriteLine(data?.NickName);
+        Console.WriteLine(data?.NickName);
         }
-    }
+        } *@
 }
 
 <div class="text-center">
     <h1 class="display-4">@ViewData["Title"]</h1>
-    <form method="post" class="mt-5">
+    <form method="post" class="mt-5" action="/players/search">
         <label asp-for="FilterModel.Name">Name</label>
         <input type="text" id="playerNameInput" asp-for="FilterModel.Name" />
 
@@ -55,6 +55,8 @@
                     <th scope="col">Physical</th>
                     <th scope="col">SkillMoves</th>
                     <th scope="col">WeakFoot</th>
+                    <th scope="col">Edit</th>
+                    <th scope="col">Delete</th>
                 </thead>
 
                 @if (Model.PlayerList != null)
@@ -76,6 +78,17 @@
                             <td>@player.Physical</td>
                             <td>@player.SkillMoves</td>
                             <td>@player.WeakFoot</td>
+                            <td>
+                                <form method="post">
+                                    <input type="submit" value="Edit" class="btn btn-primary" />
+                                </form>
+                            </td>
+                            <td>
+                                <form method="post" action="">
+                                    <input type="hidden" value="@player.Id" asp-for="PlayerIdDelete" />
+                                    <input type="submit" value="Delete" class="btn btn-danger" />
+                                </form>
+                            </td>
                         </tr>
 
                         //change row colour
